<resources>
    <string name="app_name">Beering</string>

    <string name="list_beers"><![CDATA[List of Beers]]></string>
    <string name="add_beer"><![CDATA[New Beer]]></string>
    <string name="location"><![CDATA[Save Location]]></string>
    <string name="friend_options"><![CDATA[Friends Options]]></string>
    <string name="options"><![CDATA[Options]]></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="search_hint"><![CDATA[Search List]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beer_list">BeerList</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="personal"><![CDATA[Personal]]></string>
    <string name="user_name"><![CDATA[Username]]></string>
    <string name="user_mail"><![CDATA[E-Mail]]></string>
    <string name="settings"><![CDATA[Settings]]></string>
    <string name="address"><![CDATA[IP Address]]></string>
    <string name="port"><![CDATA[Port]]></string>
    <string name="save"><![CDATA[Save]]></string>
    <string name="cancel"><![CDATA[Cancel]]></string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
