<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/craft_beer"
    tools:context=".MainActivity"
   >
    <Button
        android:id="@+id/list_beers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/list_beers"/>
    <Button
        android:id="@+id/location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/list_beers"
        android:text="@string/location"/>
    <Button
        android:id="@+id/friends"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/friend_options"/>
    <Button
        android:id="@+id/options"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/friends"
        android:layout_centerHorizontal="true"
        android:text="@string/options"/>

</RelativeLayout>
