<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="beer.project.com.beering.OptionsActivity"
    android:id="@+id/options_container">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="@string/personal"/>
            <TextView
                android:layout_below="@id/personal"
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/user_name"/>
            <EditText
                android:id="@+id/user_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_name"
                android:editable="false"
                android:lines="1"/>
            <TextView
                android:layout_below="@id/user_text"
                android:id="@+id/user_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/user_mail"/>
            <EditText
                android:id="@+id/user_mail_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_mail"
                android:editable="false"
                android:lines="1"/>
            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_mail_text"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="@string/settings"/>
            <TextView
                android:id="@+id/server_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/settings"
                android:text="@string/address"/>
            <EditText
                android:id="@+id/address_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/server_address"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/server_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_text"
                android:layout_centerHorizontal="true"
                android:text="@string/port"/>
            <EditText
                android:id="@+id/port_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/server_port"
                android:layout_centerHorizontal="true"
                />
            <Button
                android:id="@+id/save_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/port_text"
                android:layout_centerHorizontal="true"
                android:text="@string/save"/>
            <Button
                android:id="@+id/cancel_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/port_text"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/save_options"
                android:text="@string/cancel"/>
            </RelativeLayout>
        </ScrollView>
</RelativeLayout>
